@@ -1,3 +1,4 @@
+2022-10-04: [FEATURE] Allow users to add extra width at the end of a decoration.
 2022-10-04: [BUGFIX] Fix `Visualizer` image size bug
 2022-10-04: [TESTS] Pin `pytest-cov` to 3.0.0 to retain `multiprocessing` support
 2022-09-24: [BUGFIX] Improve icon background rendering in `Systray` with `RectDecoration`
